--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="panel"><h1 class="counter">--:--</h1></div>
     <div class="panel">
       <h1>Your spot is</h1>
-      <!-- <div class="dots bluedot vcenter"><span></span></div> -->
+      <div class="dots bluedot vcenter"><span></span></div>
     </div>
     <div class="panel">
       <h1>at the WINWIN.zone</h1>
@@ -137,14 +137,13 @@
       </div>
       <div class="panel vcenter consensustext">
         <p>
-          You have at least reached 
-          5 times consensus in this
+          You have reached consensus
+          <span>0</span> time(s) in this
           discussion.
-
 
           Although you might differ in
           opinions on this statement,
-          you have discovered enough 
+          you have discovered some 
           common ground to make
           decisions together.
         </p>
@@ -154,11 +153,11 @@
         <img class="img-swipe" src="imgs/swipe_agree_pink.png">
       </div>
     </div>
-    <div class="swipeable"><h1>Results</h1></div>
+    <div class="swipeable"><h1>Fetching results...</h1></div>
   </div> 
 
   <!-- No consensus -->
-  <div class="consensless screen">
+  <div class="consensless screen container">
     <div class="panel vcenter">
       <div class="panel vcenter ">
         <h1>You unfortunately had no moments of consensus.</h1>
@@ -168,18 +167,27 @@
     </div>
   </div>  
 
-  <!-- Moments -->
-  <div class="moments screen">
+  <!-- Error -->
+  <div class="error screen container">
+    <div class="swipeable">
+      <div class="panel vcenter">
+        <h1 class="msg"></h1>
+        <h1>🙁🙁🙁</h1>
+      </div>
+      <div class="panel vcenter">
+        <h1>Join again?</h1>
+        <img class="img-swipe" src="imgs/swipe_agree_pink.png">
+      </div>
+    </div>
+    <div class="swipeable"><h1>JOINING</h1></div>
+  </div> 
+
+  <!-- Results -->
+  <div class="results screen">
     <div class="panel"><h1>Your moments of consensus.</h1></div>
     <div class="panel"><h1>🌈🌈🌈</h1></div>  
     <div class="panel vcenter moments">
-      <ul>
-        <li>00:01 friends should be shamed for flying and i am talking more and more blabla</li>
-        <li>00:01 friends should be shamed for flying</li>
-        <li>00:01 friends should be shamed for flying</li>
-        <li>00:01 friends should be shamed for flying</li>
-        <li>00:01 friends should be shamed for flying</li>
-      </ul>
+      <ul></ul>
     </div>
   </div>
 
