more more app updates

--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
         <img class="img-swipe" src="imgs/swipe_agree_pink.png">
       </div>
     </div>
-    <div class="swipeable"><h1>Results</h1></div>
+    <div class="swipeable"><h1>Fetching results...</h1></div>
   </div> 
 
   <!-- No consensus -->
-  <div class="consensless screen">
+  <div class="consensless screen container">
     <div class="panel vcenter">
       <div class="panel vcenter ">
         <h1>You unfortunately had no moments of consensus.</h1>
@@ -167,11 +167,11 @@
     </div>
   </div>  
 
-  <!-- Not enough -->
-  <div class="notenough screen container">
+  <!-- Error -->
+  <div class="error screen container">
     <div class="swipeable">
       <div class="panel vcenter">
-        <h1>Not enough people joined this session.</h1>
+        <h1 class="msg"></h1>
         <h1>🙁🙁🙁</h1>
       </div>
       <div class="panel vcenter">
