--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <h1>welcome to</h1>
       </div>
       <div class="panel">
-        <h1>winwin zone</h1>
+        <h1>winwin.zone</h1>
       </div>
       <div class="panel">
-        <h1>Join Next session</h1>
         <div class="vcenter">
           <img class="img-swipe" src="imgs/swipe_agree_pink.png">
         </div>
-        <h1>swipe right to join</h1>
+        <h1>swipe right</h1>
+        <h1>to join</h1>
       </div>        
     </div>
     <div class="swipeable"><h1>Joining...</h1></div>
