fix for tap triggered swipes

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 
 </div>
 
+<script src="js/audio.js"></script> 
 <script src="js/cookies.js"></script> 
 <script src="js/swipe.js"></script> 
 <script src="js/index.js"></script> 
