--- a/screen.html
+++ b/screen.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="refresh" content="600">
 <style>
 /*The difference between an ID and a class is that an ID can be used to identify one element, whereas a class can be used to identify more than one.
 
