more byob fixes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <!-- Tutorial -->
   <div class="tutorial screen vcenter">
-    <div class="panel"><img class="tutorial" src="imgs/tutorial.gif" height="600px"><h1></h1></div>
+    <div class="panel"><img class="tutorial" src="imgs/tutorial.gif"/></div>
   </div>
 
   <!-- showReady() -->
