--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <h1>to join</h1>
       </div>        
     </div>
+   <div class="panel">
     <div class="swipeable"><h1>Joining...</h1></div>
+   </div>
   </div>
 
   <!-- Until next session -->
@@ -56,34 +58,38 @@
   <div class="ready screen container">
     <div class="swipeable"><h1>Disagree</h1></div>
     <div class="swipeable">
-      <div class="panel vcenter">
+     <div class="panel">
+
+       <div class="vcenter">
           <h1>agree</h1>
           <img class="img-swipe" src="imgs/swipe_agree_pink.png">
-      </div>
-      <div class="panel statement">
+       </div>
+       <div class=" statement">
         <h1>You are with <span class="count"></span> people do you want to start?</h1>
-      </div>
-      <div class="panel vcenter">
+       </div>
+       <div class=" vcenter">
           <img class="img-swipe" src="imgs/swipe_disagree_pink.png">
           <h1>disAgree</h1>
-      </div>
+       </div>
+     </div>
     </div>
     <div class="swipeable"><h1>Agree</h1></div>
   </div>  
 
   <!-- Statement/Question -->
   <div class="question screen container">
-    <div class="swipeable"><h1>Disagree</h1></div>
-    <div class="swipeable">
-      <div class="panel yes vcenter">
-        <div class="panel agree"><h1>agree</h1></div>
-        <img class="img-swipe" src="imgs/swipe_agree_pink.png">
+    <div class="panel">
+     <div class="swipeable"><h1>Disagree</h1></div>
+      <div class="swipeable">
+       <div class="yes vcenter">
+         <div class="agree"><h1>agree</h1></div>
+         <img class="img-swipe" src="imgs/swipe_agree_pink.png">
+       </div>
+       <div class="statement">
+           <h1 class="stmt">Friends should be shamed for flying</h1>
+      <h2 class="counter">--:--</h2>
       </div>
-      <div class="panel statement">
-          <h1 class="stmt">Friends should be shamed for flying</h1>
-     <h2 class="counter">--:--</h2>
-      </div>
-     
+    </div> 
      
       <div class="panel no vcenter">
 
