--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </audio>
 
 <div id="content"></div>
-<!--
+
  <div class="background">
    <h3>winwinwinwin</h3>
    <h3>winwinwinwin</h3>
@@ -32,7 +32,6 @@
    <h3>winwinwinwin</h3>
    <h3>winwinwinwin</h3>
  </div>
--->
 
 
 <div id="templates">
@@ -63,7 +62,7 @@
 
   <!-- Tutorial -->
   <div class="tutorial screen vcenter">
-    <div class="panel"><img class="tutorial" src="imgs/tutorial.gif"/></div>
+    <div class="panel"><img class="tutorial" src="imgs/tut_mobile.gif"/></div>
   </div>
 
   <!-- showReady() -->
@@ -75,6 +74,7 @@
         </div>
         <button class="buttondisagree"><h5>NO</h5></button>
         <button class="buttonagree"><h5>YES</h5></button>
+       
       </div>
     </div>
   </div>
@@ -85,9 +85,10 @@
       <div class="panel  outline">
 	<div class="statement">
           <h1 class="stmt">Friends should be shamed for flying</h1>
-          <h2 class="counter">--:--</h2>
-          <button class="buttondisagree"><h5>DISAGREE</h5></button>
+          <h1 class="counter">--:--</h1>
+         
           <button class="buttonagree"><h5>AGREE</h5></button>
+          <button class="buttondisagree"><h5>DISAGREE</h5></button>
         </div>
       </div>
     </div>
@@ -98,7 +99,7 @@
     <div class="center">
       <div class="panel pleasewait outline">
         <h1>Waiting for everyone to respond...</h1>
-        <div class="panel"><h2 class="counter">--:--</h2></div>
+        <div class="panel"><h1 class="counter">--:--</h1></div>
       </div>
     </div>
   </div>  
@@ -164,12 +165,13 @@
     </div>
   </div>
 
+
   <!-- Results -->
   <div class="results vcenter screen">
     <div class="center outline">
       <div class="panel">
 	<h1>Your moments of consensus.</h1>
-        <div class="panelscroll"><h1>🌈🌈🌈</h1></div>  
+        <h1 class="panelscroll">🌈🌈🌈</h1>  
         <ul></ul>
       </div>
     </div>
