tweaks bug fixes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>  
 
   <!-- Tutorial -->
-  <div class="tutorial screen vcenter">
+  <div class="tutorial screen">
     <div class="panel"><img class="tutorial" src="imgs/tut_mobile.gif"/></div>
   </div>
 
@@ -72,9 +72,8 @@
         <div class=" statement">
           <h1>You are with <span class="count"></span> people do you want to start?
         </div>
-        <button class="buttondisagree"><h5>NO</h5></button>
         <button class="buttonagree"><h5>YES</h5></button>
-       
+        <button class="buttondisagree"><h5>NO</h5></button>
       </div>
     </div>
   </div>
