--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <!-- Prompt -->
   <div class="prompt vcenter screen">
-    <div class="center outline">
+    <div class="center outline prompt-margin">
       <div class="panel">
         <h1>You responded <span class="answer"></span> to</h1>
         <div class="panel vcenter question"><h1></h1></div>
