pushing the screen stuff around a bit

--- a/screen.html
+++ b/screen.html
@@ -249,8 +249,8 @@ line-height: 367px;
 
     <div class="border block2">
       <div class="center">
-        <h2>statement to discuss:</h2>
-        <h5 class="stmt"></h5>
+        <h2>To join with your phone visit</h2>
+        <h5>http://winwin.zone</h5>
       </div>
     </div>    
   </div>
@@ -258,9 +258,7 @@ line-height: 367px;
   <div id="content"></div>
   
   <div class="border block4">
-    <h5>To join go with your phone to the</h5>
-    <h5>website www.winwin.zone</h5>
-    <h5>enjoy!</h5>
+    <h5>WINWIN - a Concensus algorithm</h5>
   </div>
 
 </div>
@@ -269,11 +267,8 @@ line-height: 367px;
 
 <template class="people">
   <div class="border block3">
-    <h4>0/4</h4>
-    <h3>People joining</h3>
-    <h3>the session</h3>
-    <h3>JOIN THEM</h3>
-    <h3>NOW!!</h3>
+    <h2>Statement to discuss:</h2>
+    <h3 class="stmt"></h3>
   </div>
 </template>
 
@@ -281,7 +276,7 @@ line-height: 367px;
   <div class="border block3">
     <h3>To join go with your</h3>
     <h3>phone to the website </h3>
-    <h3>www.winwin.zone</h3>
+    <h3>http://winwin.zone</h3>
     <h3>enjoy!</h3>
   </div>
 </template>
