--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   <div class="til vcenter screen">
     <div class="center outline">
       <div class="panel">
-        <h1>Find your color on the ground</h1>
-        <h1> Your spot is</h1> 
+        <h1>Take your possession underneith the hood</h1>
+        <h1>with the color:</h1> 
         <div class="dots bluedot vcenter"><span></span></div>
       </div>  
     </div>
