--- a/tree.html
+++ b/tree.html
@@ -88,7 +88,7 @@ body {
             ],
             "state": 2,
             "id": 2,
-            "name": "Foo"
+            "name": "Consensus is antiquated and conservative"
           },
           {
             "answers": [
@@ -103,10 +103,10 @@ body {
             ],
             "state": 2,
             "id": 3,
-            "name": "Bar"
+            "name": "Consensus is progressive"
           }
         ],
-        "name": "Most politicians are reliable (or unreliable)"
+        "name": "Consensus is an interesting way to find solutions"
       },
       {
         "answers": [
@@ -121,7 +121,7 @@ body {
         ],
         "state": 2,
         "id": 4,
-        "name": "Most politicians are reliable (or unreliable)"
+        "name": "Consensus is an interesting way to find solutions"
       }
     ],
     "name": "Root"
