--- a/screen.html
+++ b/screen.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- <meta http-equiv="refresh" content="600"> -->
+<meta http-equiv="refresh" content="600">
 <style>
 /*The difference between an ID and a class is that an ID can be used to identify one element, whereas a class can be used to identify more than one.
 
@@ -258,7 +258,7 @@ line-height: 367px;
   <div id="content"></div>
   
   <div class="border block4">
-    <h5>WINWIN - a Concensus algorithm</h5>
+    <h5>WINWIN - a Consensus algorithm</h5>
   </div>
 
 </div>
