--- a/index.html
+++ b/index.html
@@ -60,14 +60,16 @@
     <div class="center">
       <div class="panel outline">
         <div class=" statement">
-          <h1>You are with <span class="dynamic count"></span> people do you want to start?</h1>
+          <h1>You are with <span class="dynamic count"></span> people. We will begin shortly!</h1>
         </div>
+	<!--
         <button class="button agree left">
           <sup>( </sup><span class="white logo">YES</span><sub> )</sub>
         </button>
         <button class="button disagree">
           <sup>( </sup><span class="white logo">NO</span><sub> )</sub>
         </button>
+	-->
       </div>
     </div>
   </div>
